Switch kernel pacer config to fixed presets
Replaces file-based Java kernel pacer policy loading with checked `PolicyPreset` values (`DEFAULT`, `SERVICEABILITY_DEFAULT`, `SCENARIO_LAB`, `RUNTIME_BOUNDARY_PROOF`) wired through server properties and runtime assembly. Removes shipped/checked pacer JSON config files and related CLI/workflow arguments, updates runtime packaging and proof selection paths, and aligns tests/docs with preset-based behavior. Also tightens boundaries by requiring explicit Oracle `--config` with `test_*` Redis scope and rejecting proof-only preset use outside `test_*` scopes.